# ygocmg

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tauri_commands.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/card/: confirmation_service.rs  mod.rs  service.rs
src-tauri/src/application/config/: service.rs
src-tauri/src/application/dto/: card.rs  common.rs  export.rs  import.rs  job.rs  mod.rs  resource.rs  standard_pack.rs  strings.rs
src-tauri/src/application/export/: service.rs
src-tauri/src/application/import/: service.rs
src-tauri/src/application/jobs/: service.rs
src-tauri/src/application/pack/: mod.rs  service.rs  write_service.rs
src-tauri/src/application/resource/: service.rs
src-tauri/src/application/standard_pack/: repository.rs  service.rs
src-tauri/src/application/strings/: confirmation_service.rs  service.rs
src-tauri/src/application/workspace/: service.rs
src-tauri/src/bootstrap/: app_state.rs  mod.rs  wiring.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/card/: code.rs  derive.rs  mod.rs  model.rs  normalize.rs  validate.rs
src-tauri/src/domain/common/: error.rs  ids.rs  issue.rs  mod.rs  time.rs
src-tauri/src/domain/config/: model.rs  rules.rs
src-tauri/src/domain/language/: model.rs  rules.rs
src-tauri/src/domain/namespace/: model.rs  (+1 more)
src-tauri/src/infrastructure/: assets.rs  mod.rs  pack_locator.rs  standard_baseline.rs  tauri_event_bus.rs
src-tauri/src/runtime/: confirmation_cache.rs  mod.rs  preview_token_cache.rs  standard_pack_cache.rs
src-tauri/tests/: export_bundle_flow.rs  import_pack_flow.rs  job_runtime.rs  minimal_authoring_flow.rs  standard_pack.rs
(+148 files in other folders)
