[package]
name = "ygocmg-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "ygocmg_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["clock", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["serde", "std", "v4", "v7"] }

[dev-dependencies]
tempfile = "3.27.0"
