[package]
name = "ygocmg-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "ygocmg_core"
path = "src/lib.rs"

[dependencies.tauri]
version = "2"
features = ["protocol-asset"]

[dependencies]
chrono = { version = "0.4.44", features = ["clock", "serde"] }
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-dialog = "2.7.0"
thiserror = "2.0.18"
unicode-normalization = "0.1.24"
uuid = { version = "1.23.1", features = ["serde", "std", "v4", "v7"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.27.0"
